--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -63,14 +63,14 @@
       .row:after{content:"";display:table;clear:both}
       .list-script{border-radius:0;height:655px;background:#fff;overflow:scroll;overflow-x:hidden;width:100%;margin-top:3px;padding:0;border:1px solid #ccc}
       .list-script label{padding:0;display:inline-block}
-      .list-output-content{height:737px;background:#fff;width:100%;padding-left:8px;padding-right:10px;margin:0;border:0 solid #ccc}
+      .list-output-content{height:100%;background:#fff;width:100%;padding:10px;margin:0;border:0 solid #ccc}
       .mytable{overflow-x:hidden;height:218px;margin:0;border:0 solid #ccc}
       table{border-collapse:collapse;width:100%}
       tr{width:100%;border:1px solid #f0f0f0;background:#f5f5f5}
       tr:nth-child(even){background:#fff;width:100%}
       .bookmark-font{font-size:15px;text-align:center}
-      iframe{width:100%;height:520px;border:0}
-      .welcome{width:100%;height:520px;padding:10px}
+      iframe{width:100%;height:100%;border:0}
+      .welcome{width:100%;height:100%;padding:10px}
       .welcome a{color:#f60!important}
       .backtotop{background:#bbb;text-align:center;width:100%;border-radius:0 0 4px 4px;height:27px;color:#111}
       .backtotop a{font-size:12px;padding:5px;color:#111;font-weight:700;width:100%;text-transform:uppercase;background:#bbb}
@@ -1728,16 +1728,6 @@
       </div>
       <div class="content">
         <div class="list-output-content">
-          <div id="reloadads1" style="width:100%; height:90px; margin-top:10px; margin-left:5px; margin-bottom:10px">
-            <!-- MIKROTIK SCRIPT DB3 -->
-            <ins class="adsbygoogle"
-              style="display:inline-block;width:728px;height:90px"
-              data-ad-client="ca-pub-9740800920365268"
-              data-ad-slot="4637807296"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script> 
-          </div>
           <div class="welcome" id="welcome">
             <h2>COMPLETE MIKROTIK SCRIPT ROUTEROS DATABASE</h2>
             <pre>
@@ -1759,16 +1749,6 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
 </pre>
           </div>
           <iframe id="change-iframe-url" src=""></iframe>
-          <div id="reloadads2" style="width:100%; height:90px; margin-top:10px; margin-left:5px;">
-            <!-- MIKROTIK SCRIPT DB3 -->
-            <ins class="adsbygoogle"
-              style="display:inline-block;width:728px;height:90px"
-              data-ad-client="ca-pub-9740800920365268"
-              data-ad-slot="4637807296"></ins>
-            <script>
-              (adsbygoogle = window.adsbygoogle || []).push({});
-            </script> 
-          </div>
         </div>
       </div>
       <div class="footer">
@@ -1857,10 +1837,90 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
         <div id="dialogboxfoot"></div>
       </div>
     </div>
-    <script src="../login/login.js"></script>
+	<script src="../login/login.js"></script>
     <script>
-      var _0x1c0c08=_0x2093;(function(_0x5d0f63,_0x437eb4){var _0x1c16af=_0x2093,_0xc066d1=_0x5d0f63();while(!![]){try{var _0x2b24f2=-parseInt(_0x1c16af(0x1a2))/0x1+parseInt(_0x1c16af(0x18f))/0x2+parseInt(_0x1c16af(0x180))/0x3*(parseInt(_0x1c16af(0x189))/0x4)+-parseInt(_0x1c16af(0x19e))/0x5+parseInt(_0x1c16af(0x192))/0x6*(parseInt(_0x1c16af(0x199))/0x7)+-parseInt(_0x1c16af(0x19d))/0x8+-parseInt(_0x1c16af(0x1a1))/0x9*(-parseInt(_0x1c16af(0x19f))/0xa);if(_0x2b24f2===_0x437eb4)break;else _0xc066d1['push'](_0xc066d1['shift']());}catch(_0x4d81b1){_0xc066d1['push'](_0xc066d1['shift']());}}}(_0xb894,0xbee86));function truefalseFunction(_0x44ce18){var _0x76d35c=_0x2093;return _0x44ce18[_0x76d35c(0x18a)]?!![]:![];}var host1=_0x1c0c08(0x17f),host2=_0x1c0c08(0x182),host3=_0x1c0c08(0x188),host4='github',host5='io',host6=host1+host2+host3+'.'+host4+'.'+host5;window['location']['href']!==host6+'/mikrotik/index.html'&&location[_0x1c0c08(0x1a4)](host6+_0x1c0c08(0x191));var x=window[_0x1c0c08(0x196)](_0x1c0c08(0x198));function _0x2093(_0x5ee661,_0x518cbc){var _0xb89434=_0xb894();return _0x2093=function(_0x2093bb,_0x3034e5){_0x2093bb=_0x2093bb-0x17e;var _0x236d71=_0xb89434[_0x2093bb];return _0x236d71;},_0x2093(_0x5ee661,_0x518cbc);}truefalseFunction(x),x[_0x1c0c08(0x194)](truefalseFunction),document[_0x1c0c08(0x19a)](_0x1c0c08(0x17e))['hidden']=!![];function reloadads1(){var _0x10a694=_0x1c0c08;document[_0x10a694(0x19a)](_0x10a694(0x190))[_0x10a694(0x1a8)]=document[_0x10a694(0x19a)]('reloadads1')[_0x10a694(0x1a8)];}function reloadads2(){var _0x5c663a=_0x1c0c08;document['getElementById']('reloadads2')['innerHTML']=document['getElementById']('reloadads2')[_0x5c663a(0x1a8)];}function content(_0x35c6ed){var _0x2707fb=_0x1c0c08,_0x39d88c=document[_0x2707fb(0x19a)](_0x2707fb(0x17e));_0x39d88c[_0x2707fb(0x197)]('src',_0x35c6ed),document[_0x2707fb(0x19a)]('change-iframe-url')['hidden']=![],document[_0x2707fb(0x19a)](_0x2707fb(0x19c))[_0x2707fb(0x193)]=!![];}function getcontent(_0x3ff643){var _0x5b7c21=_0x1c0c08,_0x35065c=document[_0x5b7c21(0x19a)]('change-iframe-url'),_0x4ee688=_0x3ff643['getAttribute'](_0x5b7c21(0x1a7));_0x35065c[_0x5b7c21(0x197)](_0x5b7c21(0x18c),_0x4ee688),document[_0x5b7c21(0x19a)](_0x5b7c21(0x17e))[_0x5b7c21(0x193)]=![],document[_0x5b7c21(0x19a)]('welcome')[_0x5b7c21(0x193)]=!![],reloadads1(),reloadads2();}function myFunctionSearch(){var _0x4adcfd=_0x1c0c08,_0x48eafd,_0x5d42aa,_0x164367,_0x4939f1,_0x455ff2,_0x1c3f2c,_0x1ca6eb;_0x48eafd=document[_0x4adcfd(0x19a)](_0x4adcfd(0x186)),_0x5d42aa=_0x48eafd[_0x4adcfd(0x187)]['toUpperCase'](),_0x164367=document[_0x4adcfd(0x19a)]('myTable'),_0x4939f1=_0x164367['getElementsByTagName']('tr');for(_0x1c3f2c=0x0;_0x1c3f2c<_0x4939f1['length'];_0x1c3f2c++){_0x455ff2=_0x4939f1[_0x1c3f2c][_0x4adcfd(0x184)]('td')[0x0],_0x455ff2&&(_0x1ca6eb=_0x455ff2[_0x4adcfd(0x18d)]||_0x455ff2[_0x4adcfd(0x1a6)],_0x1ca6eb['toUpperCase']()[_0x4adcfd(0x185)](_0x5d42aa)>-0x1?_0x4939f1[_0x1c3f2c][_0x4adcfd(0x1a5)][_0x4adcfd(0x18b)]='':_0x4939f1[_0x1c3f2c][_0x4adcfd(0x1a5)][_0x4adcfd(0x18b)]='none');}}var header=document[_0x1c0c08(0x19a)](_0x1c0c08(0x181)),btns=header['getElementsByClassName'](_0x1c0c08(0x1a3));for(var i=0x0;i<btns[_0x1c0c08(0x18e)];i++){btns[i]['addEventListener'](_0x1c0c08(0x1a0),function(){var _0xc43121=_0x1c0c08,_0x3714b4=document[_0xc43121(0x195)]('active1');_0x3714b4[0x0][_0xc43121(0x183)]=_0x3714b4[0x0]['className'][_0xc43121(0x1a4)](_0xc43121(0x19b),''),this['className']+=_0xc43121(0x19b);});}function _0xb894(){var _0x47304a=['https://','52803nsSgZY','myTable','buananet','className','getElementsByTagName','indexOf','myInput','value','pbun','36jFYTcP','matches','display','src','textContent','length','197556eqwijr','reloadads1','/mikrotik/index.html','1822164XmaMym','hidden','addListener','getElementsByClassName','matchMedia','setAttribute','(max-width:\x201024px)','7klxMkS','getElementById','\x20active1','welcome','7699440mKnBCx','5486565IpGHDl','70byCeIl','click','4822533AAFaYC','1470039OiwOrH','linkPress','replace','style','innerText','href','innerHTML','change-iframe-url'];_0xb894=function(){return _0x47304a;};return _0xb894();}	
-    </script>
+	var modal = document.getElementById("myModal");
+	var span = document.getElementsByClassName("close")[0];
+
+	function callmodal() {
+		modal.style.display = "block";
+	}
+	span.onclick = function() {
+		modal.style.display = "none";
+	}
+	window.onclick = function(event) {
+		if(event.target == modal) {
+			modal.style.display = "none";
+		}
+	}
+
+
+	function truefalseFunction(x) {
+		if(x.matches) {
+			return true;
+		} else {
+			return false;
+		}
+	}
+	var host1 = "https://";
+	var host2 = "buananet";
+	var host3 = "pbun";
+	var host4 = "github";
+	var host5 = "io";
+	var host6 = host1 + host2 + host3 + "." + host4 + "." + host5
+	if (window.location.href !== host6 + "/mikrotik/") {
+	location.replace(host6 + "/mikrotik/");
+	}
+	var x = window.matchMedia("(max-width: 1024px)")
+	truefalseFunction(x)
+	x.addListener(truefalseFunction)
+	document.getElementById("change-iframe-url").hidden = true;
+
+
+
+	function content(text) {
+		var element = document.getElementById("change-iframe-url");
+		element.setAttribute("src", text);
+		document.getElementById("change-iframe-url").hidden = false;
+		document.getElementById("welcome").hidden = true;
+	}
+
+	function getcontent(e) {
+		var element = document.getElementById("change-iframe-url");
+		var ahref = e.getAttribute("href");
+		element.setAttribute("src", ahref);
+		document.getElementById("change-iframe-url").hidden = false;
+		document.getElementById("welcome").hidden = true;
+	}
+
+	function myFunctionSearch() {
+		var input, filter, table, tr, td, i, txtValue;
+		input = document.getElementById("myInput");
+		filter = input.value.toUpperCase();
+		table = document.getElementById("myTable");
+		tr = table.getElementsByTagName("tr");
+		for(i = 0; i < tr.length; i++) {
+			td = tr[i].getElementsByTagName("td")[0];
+			if(td) {
+				txtValue = td.textContent || td.innerText;
+				if(txtValue.toUpperCase().indexOf(filter) > -1) {
+					tr[i].style.display = "";
+				} else {
+					tr[i].style.display = "none";
+				}
+			}
+		}
+	}
+	var header = document.getElementById("myTable");
+	var btns = header.getElementsByClassName("linkPress");
+	for(var i = 0; i < btns.length; i++) {
+		btns[i].addEventListener("click", function() {
+			var current = document.getElementsByClassName("active1");
+			current[0].className = current[0].className.replace(" active1", "");
+			this.className += " active1";
+		})
+	}
+	</script>
 	<script async data-watzapkey="prV51372" src="https://cdn.watzap.id/widget-api.js"></script>	
   </body>
 </html>
