--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1868,8 +1868,8 @@ Send Your Mikrotik RouterOS Script For Contribution -> <a href="https://docs.goo
 	var host4 = "github";
 	var host5 = "io";
 	var host6 = host1 + host2 + host3 + "." + host4 + "." + host5
-	if (window.location.href !== host6 + "/mikrotik/") {
-	location.replace(host6 + "/mikrotik/");
+	if (window.location.href !== host6 + "/mikrotik/index.html") {
+	location.replace(host6 + "/mikrotik/index.html");
 	}
 	var x = window.matchMedia("(max-width: 1024px)")
 	truefalseFunction(x)
