--- a/vpn-game-generator.html
+++ b/vpn-game-generator.html
@@ -151,8 +151,10 @@
         <div style="clear: both;"></div>
         <div style="clear: both;"></div>
         <select onchange="myFunction()" id="vpn-list">
-          <option value="pptp">PPTP - Point to Point Tunneling Protocol</option>
-          <option value="l2tp">L2TP - Layer Two Tunneling Protocol</option>
+            <option value="pptp">PPTP - Point to Point Tunneling Protocol</option>
+            <option value="sstp">SSTP - Secure Socket Tunneling Protocol</option>				
+            <option value="l2tp">L2TP - Layer Two Tunneling Protocol</option>
+            <option value="ovpn">OVPN - Open VPN (Virtual Private Network)</option>
         </select>
         <div style="clear: both;"></div>
         <label>VPN Name on Interface</label>
