--- a/vpn-game-generator2.html
+++ b/vpn-game-generator2.html
@@ -148,9 +148,11 @@
       <div class="main-wrap">
         <div class="sidebar">
           <label>VPN Connection</label><br>
-          <select onchange="myFunction()" id="vpn-list">
+          <select onchange="myFunction()" id="vpn-list">			  
             <option value="pptp">PPTP - Point to Point Tunneling Protocol</option>
+            <option value="sstp">SSTP - Secure Socket Tunneling Protocol</option>				
             <option value="l2tp">L2TP - Layer Two Tunneling Protocol</option>
+            <option value="ovpn">OVPN - Open VPN (Virtual Private Network)</option>
           </select>
           <br>
           <label>VPN Name in Interface</label><br>
