--- a/static-routing-games.html
+++ b/static-routing-games.html
@@ -144,7 +144,7 @@
       </div>
       <div style="clear:both"></div>
       <div class="header">
-        <h1>MIKROTIK <span style="color:#ff6600;">STATIC ROUTING GAMES USE RAW</span> SCRIPT GENERATOR</h1>
+        <h1>MIKROTIK <span style="color:#ff6600;">STATIC ROUTING GAMES</span> SCRIPT GENERATOR</h1>
       </div>
       <div class="main-wrap">
         <div class="sidebar">
