--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -254,13 +254,21 @@
           <button style="margin-top:0px" id="copyscript" type="button" onclick="selectElementContents(document.getElementById('showScript'))">Copy Script</button>
         </div>
       </div>
-      <div class="footer">
-        <div style="margin-top:0px; text-align:left">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+	 <div class="footer">
+        <div style="margin-top:10px;">
+          <div id="help-telegram" style="font-size:12px; text-align:left">       
+            <b>CREATE YOUR OWN GMAIL SERVER :</b><br>
+            -----------------------------------------<br>
+		1. First go here <a target="_blank" href="https://myaccount.google.com/security">https://myaccount.google.com/security</a> then follow the instructions to activate 2-step verification, then a code will be sent to your cellphone number.<br>
+		2. Then create an application password here <a target="_blank" href="https://myaccount.google.com/apppasswords">https://myaccount.google.com/apppasswords</a>  later this password will be used to input the Mikrotik mail server.
+          </div>
         </div>
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;text-align:left">
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
         <div style="margin-top:1px; color:#888; font-size:11px">
           Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
-        </div>	 		
+        </div>	 		  
+        </div>			
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
