--- a/advanced-mikrotik-protection.html
+++ b/advanced-mikrotik-protection.html
@@ -684,7 +684,9 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
+	<script>
+	window.location.replace("https://buananet.com/advanced-mikrotik-protection.html");
+	</script>
     <script src="./login/login.js"></script>
-		
   </body>
 </html>
