--- a/mikrotik-hide-my-router-from-isp.html
+++ b/mikrotik-hide-my-router-from-isp.html
@@ -360,6 +360,9 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
+	<script>
+	window.location.replace("https://buananet.com/mikrotik-hide-my-router-from-isp.html");
+	</script>		
     <script src="./login/login.js"></script>	
     <script>     
 	
