--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
           </div>
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
           <div style="margin-top:0px; color:#777; font-size:11px">
-            Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+            Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://buananet.com/">MikroTik Generator Tools</a> P.Bun 74112, INDONESIA
           </div>
         </div>
       </div>
