--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -163,7 +163,7 @@
           </div>
           <div style="width:100%">
             <label>E-Mail Password</label>
-            <input onkeypress="return event.charCode != 32" type="text" id="input-mail-password" value="rhcylubiwfhxycee" placeholder="rhcylubiwfhxycee">
+            <input onkeypress="return event.charCode != 32" type="text" id="input-mail-password" value="wvewfprmnymfepdx" placeholder="wvewfprmnymfepdx">
           </div>
           <div style="width:100%;margin-top:10px; margin-bottom:15px; border-top:5px solid #bbb"></div>
           <div style="width:100%">
@@ -210,7 +210,7 @@
               # Created By: BuanaNETPBun.Github.io - fb.me/buananet.pbun<br>
               ###################################################<br>
               </span>			
-              /tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">rhcylubiwfhxycee</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" <span id="tls-option">start-tls="yes"</span> user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"<br>
+              /tool e-mail set address="<span style="color:#ff6600" id="mail-server">74.125.200.109</span>" from="<span style="color:#ff6600" id="mail-from1">Backup From Distribution</span>" password="<span style="color:#ff6600" id="mail-pass">wvewfprmnymfepdx</span>" port="<span style="color:#ff6600"  id="mail-port">587</span>" <span id="tls-option">start-tls="yes"</span> user="<span style="color:#ff6600" id="mail-user">backup.mikrotik.ros@gmail.com</span>"<br>
               /system scheduler rem [find name=BACKUP-TO-EMAIL]<br>
               /system scheduler add interval=<span style="color:#ff6600" id="mail-interval">7d</span> name=BACKUP-TO-EMAIL  on-event="#=======================================================\r\
               <br>
