--- a/login/index.html
+++ b/login/index.html
@@ -169,6 +169,9 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
+	<script>
+	window.location.replace("https://buananet.com/login/");
+	</script>	
     <script src="./index.js"></script>
   </body>
 </html>
