--- a/search/index.html
+++ b/search/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="https://buananet.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
     <title>MikroTik RouterOS Search - Buananet.com</title>
     <meta content='Free MikroTik RouterOS Search Info' name='description'/>
     <meta content='search, find, info, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
@@ -193,7 +193,12 @@
       </form>
     </div>
         <div style="margin-top:20px; padding-top:10px;width:100%;color:#292929; border-top:1px solid #bbb;font-weight:normal;font-size:13px">
-          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananet.com/">BUANANET.COM</a> - All Rights Reserved.
+        <div style="margin-top:15px; padding-top:10px; border-top: 1px solid #555;">
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananetpbun.github.io/">buananetpbun.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+        </div>
+        <div style="margin-top:1px; color:#888; font-size:11px">
+          Project by <a target="_blank" href="https://github.com/buananetpbun">Agus Ramadhani</a> site <a target="_blank" href="https://www.o-om.com/">o-om.com</a> P.Bun 74112, INDONESIA
+        </div>	 
         </div>
       </div>
     </div>
