--- a/search/index.html
+++ b/search/index.html
@@ -165,10 +165,10 @@
           <img src="https://buananet.com/img/made-for-mikrotik.png">
         </div>
         <ul>
-          <li><a href="https://buananet.com">HOME</a></li>
-		  <li><a href="https://buananet.com/updates.html">UPDATES</a></li>
-		  <li><a href="https://buananet.com/docs.html">DOCS</a></li>
-		  <li><a href="https://buananet.com/contact.html">CONTACT</a></li>
+          <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
+          <li><a target="_blank" href="https://github.com/buananetpbun">GITHUB</a></li>
+          <li><a href="javascript:callmodal()">DONATE</a></li>
+          <li><a target="_blank" href="https://fb.me/buananet.pbun">CONTACT</a></li>
         </ul>
       </div>
       <div class="logo">
