--- a/search/index.html
+++ b/search/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="https://buananetpbun.github.io/favicon.ico" type="image/x-icon">
-    <title>MikroTik RouterOS Search - Buananet.com</title>
+    <title>MikroTik RouterOS Search - buananetpbun.github.io</title>
     <meta content='Free MikroTik RouterOS Search Info' name='description'/>
     <meta content='search, find, info, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
     <meta content='index, follow, noodp' name='robots'/>
@@ -162,7 +162,7 @@
     <div id="wrap">
       <div id="mymenu" class="mymenu">
         <div class="mikrotik-logo">
-          <img src="https://buananet.com/img/made-for-mikrotik.png">
+          <img src="https://buananetpbun.github.io/img/made-for-mikrotik.png">
         </div>
         <ul>
           <li><a target="_blank" href="https://buananetpbun.github.io">HOME</a></li>
