--- a/search/index.html
+++ b/search/index.html
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="logo-left" style="float:left;"> 
-          <img alt="buananetpbun" width='35' src="../img/mylogo.png"><a href="./index.html"><span style='color:#ff6600 !important'>BUANANET</span>.COM</a>  
+          <img alt="buananetpbun" width='35' src="../img/mylogo.png"><a href="./index.html"><span style='color:#ff6600 !important'>Buananetpbun</span>.github.io</a>  
         </div>
       </div>
       <div id="homepage" style="width: 700px; margin-top:55px; font-Weight:normal" class="modal-content-profile">
