--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/search/">Search All About MikroTik RouterOS</a><span style="color:green; margin-left:2px" class="member-only2">free</span></p>
+            <p><a target="_blank"  href="https://buananetpbun.github.io/search/">Search All About MikroTik RouterOS</a></p>
           </div>
         </div>
         <h2>MIKROTIK ROUTEROS GENERATOR TOOLS</h2>
