--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
         </div>
       </div>
     </div>
-    <div id="myModal" class="modal">
+    <div style="display:none"  id="myModal" class="modal">
       <div style="width: 600px;" class="modal-content">
         <span class="close">&times;</span>
         <div class="qris" style="text-align:justify; float:right; margin-right:10px">
