--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
           <li><a target="_blank" href="https://fb.me/buananetmikrotik/">CONTACT</a></li>
         </ul>
         <div class="show-login-menu" id="show-login-menu">
-          <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="callmodalLogin();showLogin()">Login</button>
-          <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="javascript:callmodalLogin();showRegistration()">Sign Up</button>
+          <button style="width:100px !important;  padding:6px; margin:4px; font-weight:bold;font-size:14px; margin-left:12px !important" onclick="window.location.href = 'http://buananet.com/login/#sign-in'">Login</button>
+          <button style="width:100px !important; padding:6px; margin:4px; font-weight:bold;font-size:14px" onclick="window.location.href = 'http://buananet.com/login/#sign-up'">Sign Up</button>
           <span class="text-join-now" style="font-size:14px; font-weight:bold; margin-left:5px">40.000+ members have joined.</span>
         </div>
         <div class="show-homepage-menu">
