--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik">MikroTik RouterOS Script DataBase</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
           <div class="column">
-            <p><a target="_blank"  href="https://buananetpbun.github.io/search/">Search All About MikroTik RouterOS</a></p>
+            <p><a target="_blank"  href="https://buananet.com/search/">Search All About MikroTik RouterOS</a><span style="color:green; margin-left:2px" class="member-only2">free</span></p>
           </div>
         </div>
         <h2>MIKROTIK ROUTEROS GENERATOR TOOLS</h2>
@@ -280,7 +280,7 @@
           <div class="column">
             <p><a target="_blank"  href="https://buananetpbun.github.io/queue-tree-generator-shared.html">Queue Tree + Bandwidth Shared Up-To</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
             <p><a target="_blank"  href="https://buananetpbun.github.io/mikrotik-pcq-generator.html">PCQ for Queue Tree and Queue Simple</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
-            <p><a disabled target="_blank"  href="https://buananetpbun.github.io/mikrotik-queue-qos.html"><s>QoS Priority Youtube, Tiktok, WA, FB, etc.</s></a><img alt="member-only" class="member-only" src="./img/user.png"></p>
+            <p><a disabled target="_blank"  href="https://buananetpbun.github.io/mikrotik-queue-qos.html">QoS Priority Youtube, Tiktok, WA, FB, etc.</a><img alt="member-only" class="member-only" src="./img/user.png"></p>
           </div>
         </div>
         <div style="border-top:1px solid #ccc; margin-top:10px; padding-top:10px"><span style="font-size:16px;font-weight:600">☰ HOTSPOT <span style="color:#ff6600">//</span> PPPOE <span style="color:#ff6600">//</span> PPP</span></div>
