--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -262,7 +262,7 @@
       </div>
       <div id="center-screen2" class="center-screen">
         <div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px">
-          GET FULL ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">SUBSCRIBE NOW</button>
+          GET PREMIUM ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">GO TO BUANANET.COM</button>
           <div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown3"></div>
         </div>
       </div>
