--- a/mikrotik-hotspot-wizard.html
+++ b/mikrotik-hotspot-wizard.html
@@ -206,7 +206,7 @@
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
       <div id="center-screen" class="center-screen"><div style="font-size:20px; background-color:#333; padding:20px; border-radius:10px">Please Activate Your Email.<br><button id="verify">VERIFY YOUR E-MAIL NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown2"></div></div></div>
-      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px">GET FULL ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">SUBSCRIBE NOW</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown3">Already Subscribed? Please Reload Page or Press F5</div></div>
+      <div id="center-screen2" class="center-screen"><div style="font-size:20px;background-color:#333; padding:20px; border-radius:10px">GET PREMIUM ACCESS<br>PLEASE SUBSCRIBE<br><button id="not-subscribe">GO TO BUANANET.COM</button><div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown3">redirected to the new domain https://buananet.com</div></div>
 	  </div>	  
     </div>
     <div oncontextmenu="return false;" id="myLogin" class="modal-login">
