--- a/price.html
+++ b/price.html
@@ -183,7 +183,7 @@
             <h3 style="color: red;">$ 7.00</h3>
           </div>
         </div>			
-        <button onclick="window.location.href='https://buananet.com/login/';" style="width:200px !important; padding:6px; margin:4px; margin-top:20px; font-weight:bold; font-size:14px" id="subscibe-now">Join and Subscribe Now</button>
+        <button onclick="window.location.href='https://buananet.com/login/';" style="width:200px !important; padding:6px; margin:4px; margin-top:20px; font-weight:bold; font-size:14px" id="subscibe-now">Join and GO TO BUANANET.COM</button>
         <div style="margin-top:20px; padding-top:10px;width:100%;color:#292929; border-top:1px solid #bbb;font-weight:normal;font-size:13px">
           © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://buananet.com/">BUANANET.COM</a> - All Rights Reserved.
         </div>
