--- a/mikrotik-backup-to-mail.html
+++ b/mikrotik-backup-to-mail.html
@@ -352,6 +352,6 @@ You will be redirected to the new domain buananet.com</div></div>
         <div id="dialogboxfoot"></div>
       </div>
     </div>
-    	
+    <script src="./login/login.js"></script>	
   </body>
 </html>
