--- a/mikrotik-block-website-generator.html
+++ b/mikrotik-block-website-generator.html
@@ -280,6 +280,6 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>
-    	
+    <script src="./login/login.js"></script>	
   </body>
 </html>
