--- a/mikrotik-block-sharing-hotspot.html
+++ b/mikrotik-block-sharing-hotspot.html
@@ -253,6 +253,6 @@
         <div id="dialogboxfoot"></div>
       </div>
     </div>	
-    	
+    <script src="./login/login.js"></script>	
   </body>
 </html>
