--- a/mikrotik-expired-isolate-pppoe-hotspot.html
+++ b/mikrotik-expired-isolate-pppoe-hotspot.html
@@ -254,7 +254,7 @@
       </div>
     </div>
     <div oncontextmenu="return false;" id="myLockScreen" class="lock-screen">
-      <div id="center-screen" class="center-screen">
+      <div id="center-screen1" class="center-screen">
         <div style="font-size:20px; background-color:#333; padding:20px; border-radius:10px">
           Please Activate Your Email.<br><button id="verify">VERIFY YOUR E-MAIL NOW</button>
           <div style="font-size:11px; color:#888; text-align:center; font-weight:normal; margin-top:10px" id="countdown2"></div>
